# src/Admitto.UI.Admin/openapi-spec.json
@@ -3999,103 +3999,6 @@
         ]
       }
     },
-    "/admin/teams/{teamId}/events/{eventId}/coupons/{couponId}/revoke": {
-      "post": {
-        "tags": [
-          "Admin - Coupons"
-        ],
-        "operationId": "RevokeCoupon",
-        "parameters": [
-          {
-            "name": "couponId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "teamId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          },
-          {
-            "name": "eventId",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "format": "uuid"
-            }
-          }
-        ],
-        "responses": {
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HttpValidationProblemDetails"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Forbidden",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "409": {
-            "description": "Conflict",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal Server Error",
-            "content": {
-              "application/problem+json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "200": {
-            "description": "OK"
-          }
-        },
-        "security": [
-          {
-            "Bearer": [ ]
-          }
-        ]
-      }
-    },
     "/admin/teams/{teamId}/events/{eventId}/ticket-types": {
       "post": {
         "tags": [
@@ -8193,7 +8096,6 @@
           "expiresAt",
           "bypassRegistrationWindow",
           "redeemedAt",
-          "revokedAt",
           "createdAt"
         ],
         "type": "object",
@@ -8236,13 +8138,6 @@
             ],
             "format": "date-time"
           },
-          "revokedAt": {
-            "type": [
-              "null",
-              "string"
-            ],
-            "format": "date-time"
-          },
           "createdAt": {
             "type": "string",
             "format": "date-time"
@@ -8259,7 +8154,6 @@
         "enum": [
           "active",
           "redeemed",
-          "revoked",
           "expired"
         ]
       },
